[package]
name = "serde_ipld_dagcbor"
version = "0.1.0"
authors = [
    "Pyfisch <pyfisch@posteo.org>",
    "Steven Fackler <sfackler@gmail.com>",
    "Volker Mische <volker.mische@gmail.com>"
]
repository = "https://github.com/vmx/serde_ipld_dagcbor"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "IPLD DAG-CBOR support for serde."
keywords = ["serde", "cbor", "serialization", "no_std"]
categories = ["encoding"]
edition = "2018"

[dependencies]
cid = { version = "0.8.0", features = ["serde-codec"] }
half = "1.2.0"
serde = { version = "1.0.14", default-features = false }

[dev-dependencies]
serde_derive = { version = "1.0.14", default-features = false }
libipld-core = { version = "0.13.1", features = ["serde-codec"] }
serde_bytes = "0.11.5"

[features]
default = ["std"]
# Uses `alloc` library and adds support for vector functions with
# `no_std`.
alloc = ["serde/alloc"]
std = ["serde/std" ]
unsealed_read_write = []
