[package]
name = "serde_ipld_dagcbor"
version = "0.5.0"
authors = [
    "Pyfisch <pyfisch@posteo.org>",
    "Steven Fackler <sfackler@gmail.com>",
    "Volker Mische <volker.mische@gmail.com>"
]
repository = "https://github.com/ipld/serde_ipld_dagcbor"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "IPLD DAG-CBOR support for Serde."
keywords = ["serde", "cbor", "serialization", "no_std"]
categories = ["encoding"]
edition = "2018"

[dependencies]
cbor4ii = { version = "0.2.14", default-features = false, features = ["use_alloc"] }
ipld-core = { version = "0.3.2", default-features = false, features = ["serde"] }
scopeguard = "1.1.0"
serde = { version = "1.0.164", default-features = false, features = ["alloc"] }

[dev-dependencies]
serde_derive = { version = "1.0.164", default-features = false }
serde_bytes = { version = "0.11.9", default-features = false, features = ["alloc"]}
serde-transcode = "1.1.1"

[features]
default = ["std"]
std = ["cbor4ii/use_std", "ipld-core/std", "serde/std", "serde_bytes/std"]
# Prevent deserializing CIDs as bytes as much as possible.
no-cid-as-bytes = []
